// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider Interaction with Card component should apply a special style when inside a Card component 1`] = `
.emotion-0 {
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1px;
  width: 100%;
}

.emotion-0::after,
.emotion-0::before {
  height: 1px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  content: '';
}

.emotion-3 .emotion-0 {
  height: 1px;
}

.emotion-3 .emotion-0::after,
.emotion-3 .emotion-0::before {
  height: 1px;
}

.emotion-0::before {
  margin-right: 0.8rem;
}

.emotion-0::after {
  margin-left: 0.8rem;
}

.emotion-0:empty::before {
  margin-right: 0;
}

.emotion-0:empty::after {
  margin-left: 0;
}

.emotion-0::after,
.emotion-0::before {
  background-position: bottom;
  background-repeat: repeat-x;
  background-color: #c4cacc;
}

.emotion-3 .emotion-0::after,
.emotion-3 .emotion-0::before {
  background-color: #e1e4e5;
}

.emotion-2 {
  border-radius: 0.33333rem;
  font-family: Lato,Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #fff;
  border: 2px solid #e1e4e5;
}

.emotion-2 >:first-of-type {
  border-top-left-radius: calc(0.33333rem - 1px);
  border-top-right-radius: calc(0.33333rem - 1px);
}

.emotion-2 >:last-child {
  border-bottom-left-radius: calc(0.33333rem - 1px);
  border-bottom-right-radius: calc(0.33333rem - 1px);
}

<div
  className="emotion-2 emotion-3"
>
  <div
    className="emotion-0 emotion-1"
  />
  ,
</div>
`;

exports[`Divider Interaction with Card component should still be possible to pass a custom color 1`] = `
.emotion-2 {
  border-radius: 0.33333rem;
  font-family: Lato,Helvetica Neue,Helvetica,Arial,sans-serif;
  background-color: #fff;
  border: 2px solid #e1e4e5;
}

.emotion-2 >:first-of-type {
  border-top-left-radius: calc(0.33333rem - 1px);
  border-top-right-radius: calc(0.33333rem - 1px);
}

.emotion-2 >:last-child {
  border-bottom-left-radius: calc(0.33333rem - 1px);
  border-bottom-right-radius: calc(0.33333rem - 1px);
}

.emotion-0 {
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1px;
  width: 100%;
}

.emotion-0::after,
.emotion-0::before {
  height: 1px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  content: '';
}

.emotion-3 .emotion-0 {
  height: 1px;
}

.emotion-3 .emotion-0::after,
.emotion-3 .emotion-0::before {
  height: 1px;
}

.emotion-0::before {
  margin-right: 0.8rem;
}

.emotion-0::after {
  margin-left: 0.8rem;
}

.emotion-0:empty::before {
  margin-right: 0;
}

.emotion-0:empty::after {
  margin-left: 0;
}

.emotion-0::after,
.emotion-0::before {
  background-position: bottom;
  background-repeat: repeat-x;
  background-color: hotpink;
}

.emotion-3 .emotion-0::after,
.emotion-3 .emotion-0::before {
  background-color: hotpink;
}

<div
  className="emotion-2 emotion-3"
>
  <div
    className="emotion-0 emotion-1"
    color="hotpink"
  />
  ,
</div>
`;

exports[`Divider with content when 'variant' dotted is set should render correctly 1`] = `
.emotion-0 {
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1px;
  width: 100%;
}

.emotion-0::after,
.emotion-0::before {
  height: 1px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  content: '';
}

.e1wt854s5 .emotion-0 {
  height: 1px;
}

.e1wt854s5 .emotion-0::after,
.e1wt854s5 .emotion-0::before {
  height: 1px;
}

.emotion-0::before {
  margin-right: 0.8rem;
}

.emotion-0::after {
  margin-left: 0.8rem;
}

.emotion-0:empty::before {
  margin-right: 0;
}

.emotion-0:empty::after {
  margin-left: 0;
}

.emotion-0::after,
.emotion-0::before {
  background-position: bottom;
  background-repeat: repeat-x;
  background-size: 3px 1px;
  background-image: linear-gradient(to right,#c4cacc 33%,rgba(196,202,204,0) 0%);
  background-color: transparent;
}

.e1wt854s5 .emotion-0::after,
.e1wt854s5 .emotion-0::before {
  background-image: linear-gradient(to right,#e1e4e5 33%,rgba(225,228,229,0) 0%);
}

<div
  className="emotion-0 emotion-1"
>
  <span>
    T-Shirt
  </span>
</div>
`;

exports[`Divider with content when empty props should render correctly 1`] = `
.emotion-0 {
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1px;
  width: 100%;
}

.emotion-0::after,
.emotion-0::before {
  height: 1px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  content: '';
}

.e1wt854s5 .emotion-0 {
  height: 1px;
}

.e1wt854s5 .emotion-0::after,
.e1wt854s5 .emotion-0::before {
  height: 1px;
}

.emotion-0::before {
  margin-right: 0.8rem;
}

.emotion-0::after {
  margin-left: 0.8rem;
}

.emotion-0:empty::before {
  margin-right: 0;
}

.emotion-0:empty::after {
  margin-left: 0;
}

.emotion-0::after,
.emotion-0::before {
  background-position: bottom;
  background-repeat: repeat-x;
  background-color: #c4cacc;
}

.e1wt854s5 .emotion-0::after,
.e1wt854s5 .emotion-0::before {
  background-color: #e1e4e5;
}

<div
  className="emotion-0 emotion-1"
>
  <span>
    T-Shirt
  </span>
</div>
`;

exports[`Divider without content when 'variant' dotted is set should render correctly 1`] = `
.emotion-0 {
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1px;
  width: 100%;
}

.emotion-0::after,
.emotion-0::before {
  height: 1px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  content: '';
}

.e1wt854s5 .emotion-0 {
  height: 1px;
}

.e1wt854s5 .emotion-0::after,
.e1wt854s5 .emotion-0::before {
  height: 1px;
}

.emotion-0::before {
  margin-right: 0.8rem;
}

.emotion-0::after {
  margin-left: 0.8rem;
}

.emotion-0:empty::before {
  margin-right: 0;
}

.emotion-0:empty::after {
  margin-left: 0;
}

.emotion-0::after,
.emotion-0::before {
  background-position: bottom;
  background-repeat: repeat-x;
  background-size: 3px 1px;
  background-image: linear-gradient(to right,#c4cacc 33%,rgba(196,202,204,0) 0%);
  background-color: transparent;
}

.e1wt854s5 .emotion-0::after,
.e1wt854s5 .emotion-0::before {
  background-image: linear-gradient(to right,#e1e4e5 33%,rgba(225,228,229,0) 0%);
}

<div
  className="emotion-0 emotion-1"
/>
`;

exports[`Divider without content when empty props should render correctly 1`] = `
.emotion-0 {
  background: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1px;
  width: 100%;
}

.emotion-0::after,
.emotion-0::before {
  height: 1px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  content: '';
}

.e1wt854s5 .emotion-0 {
  height: 1px;
}

.e1wt854s5 .emotion-0::after,
.e1wt854s5 .emotion-0::before {
  height: 1px;
}

.emotion-0::before {
  margin-right: 0.8rem;
}

.emotion-0::after {
  margin-left: 0.8rem;
}

.emotion-0:empty::before {
  margin-right: 0;
}

.emotion-0:empty::after {
  margin-left: 0;
}

.emotion-0::after,
.emotion-0::before {
  background-position: bottom;
  background-repeat: repeat-x;
  background-color: #c4cacc;
}

.e1wt854s5 .emotion-0::after,
.e1wt854s5 .emotion-0::before {
  background-color: #e1e4e5;
}

<div
  className="emotion-0 emotion-1"
/>
`;
